--- a/src/input.css
+++ b/src/input.css
@@ -1,1 +1,26 @@
 @import "tailwindcss";
+
+
+@theme {
+    --breakpoint-mobile: 24.375rem;
+    --breakpoint-tablet: 50.625rem;
+    --breakpoint-desktop: 75rem;
+
+    --font-Instrument-Serif: "instrument serif";
+    --font-Cabinet-Grotesk: "cabinet grotesk";
+
+    --color-custom-red: #5D2510;
+}
+
+@layer base{
+    @font-face {
+        font-family: "cabinet grotesk";
+        src: local("cabinet grotesk"), url("../fonts/cabinet grotesk/CabinetGrotesk-Regular.woff2") format("woff2");
+        font-display: swap;
+    }
+    @font-face {
+        font-family: "instrument serif";
+        src: local("instrument serif"), url("../fonts/instrument serif/InstrumentSerif-Regular.ttf") format("ttf");
+        font-display: swap;
+    }
+}
